--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         </activity>
 
         <meta-data android:name="AA_DB_NAME" android:value="database" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data android:name="AA_DB_VERSION" android:value="3" />
+
+        <meta-data android:name="AA_MODELS" android:value="ru.geekbrains.android3_6.model.entity.activeandroid.AAUser, ru.geekbrains.android3_6.model.entity.activeandroid.AARepository" />
+
     </application>
 
 </manifest>
